Criado report pelo back. Finalizado projeto de back com tratamento de erros
